--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  .content {
+  section {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -50,20 +50,20 @@
     border-radius: 50%;
     margin: 15px 5px;
   }
-  .content1 {
+  article {
     text-align: center;
     border-bottom: 30px solid #3a1772;
     padding: 10px;
   }
-  .content1 p {
+  article p {
     margin: 0px;
   }
-  .content1 img {
+  article img {
     display: block;
     margin: 0 auto;
   }
-  .content1 h2,
-  .content1 h3 {
+  article h2,
+  article h3 {
     color: #3a1772;
     margin-top: 0px;
     margin-bottom: 8px;
