--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@
     justify-content: center;
     align-items: center;
   }
-  .content {
+  section {
     display: flex;
     justify-content: space-between;
   }
@@ -42,7 +42,7 @@
     border-radius: 50%;
     margin: 15px 5px;
   }
-  .content1 {
+  article {
     text-align: center;
     border-bottom: 30px solid #3a1772;
     padding: 10px;
