--- a/style.css
+++ b/style.css
@@ -70,13 +70,142 @@
   }
   footer {
     background-color: #310a31;
+    height: 100%;
     text-align: center;
-    margin: 0px;
   }
   h4 {
-    color: #d8ddef;
-    margin-top: 0px;
+    color: orange;
+    margin: 0px;
     padding: 15px;
+  }
+  a {
+    color: #d8ddef;
+    text-decoration: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  a:last-child {
+    padding-bottom: 15px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  body {
+    background-color: #d8ddef;
+    height: 100%;
+  }
+  header {
+    background-color: #310a31;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header .logo {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    padding: 1em;
+  }
+  header input {
+    border: none;
+    background-image: url("/images/search1.png");
+    background-repeat: no-repeat;
+    background-size: 2.5rem;
+    padding: 10px 10px 10px 45px;
+    margin: 20px;
+    font-size: 15px;
+  }
+  .hero {
+    background-color: #3a1772;
+    width: 100%;
+    height: 350px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  section img {
+    width: 6.5rem;
+    height: 6.5rem;
+    border-radius: 50%;
+    margin: 15px 5px;
+  }
+  article {
+    text-align: center;
+    border-bottom: 30px solid #3a1772;
+    padding: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  article p {
+    display: inline-block;
+    margin: 0px;
+    text-align: center;
+  }
+  article img {
+    width: 6.5rem;
+    height: 6.5rem;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  article h2 {
+    color: #3a1772;
+    margin-top: 0px;
+    margin-bottom: 8px;
+    display: inline-block;
+  }
+  article h3 {
+    color: #3a1772;
+    margin-top: 0px;
+    margin-bottom: 8px;
+  }
+  footer {
+    background-color: #310a31;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  footer h4 {
+    color: orange;
+    margin: 0px;
+    padding: 15px;
+  }
+  footer a {
+    color: #d8ddef;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+  }
+  footer a:last-child {
+    padding-bottom: 15px;
   }
 }
 /*# sourceMappingURL=style.css.map */
