--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
     background-color: #d8ddef;
     height: 100%;
   }
+
   header {
     background-color: #310a31;
     text-align: center;
@@ -24,6 +25,7 @@
       font-size: 15px;
     }
   }
+
   .hero {
     background-color: #3a1772;
     width: 100%;
@@ -32,16 +34,19 @@
     justify-content: center;
     align-items: center;
   }
+
   section {
     display: flex;
     justify-content: space-between;
   }
+
   img {
-    width: 6.5rem;
-    height: 6.5rem;
+    width: 8.5rem;
+    height: 8.5rem;
     border-radius: 50%;
     margin: 15px 5px;
   }
+
   article {
     text-align: center;
     border-bottom: 30px solid #3a1772;
@@ -50,10 +55,12 @@
     p {
       margin: 0px;
     }
+
     img {
       display: block;
       margin: 0 auto;
     }
+
     h2,
     h3 {
       color: #3a1772;
@@ -61,34 +68,39 @@
       margin-bottom: 8px;
     }
   }
+
   footer {
     background-color: #310a31;
     height: 100%;
     text-align: center;
   }
+
   h4 {
     color: orange;
     margin: 0px;
     padding: 15px;
   }
+
   a {
     color: #d8ddef;
     text-decoration: none;
     display: flex;
     justify-content: center;
   }
+
   a:last-child {
     padding-bottom: 15px;
   }
 }
+
 @media only screen and (min-width: 768px) {
   body {
     background-color: #d8ddef;
     height: 100%;
   }
+
   header {
     background-color: #310a31;
-    text-align: center;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -110,6 +122,7 @@
       font-size: 15px;
     }
   }
+
   .hero {
     background-color: #3a1772;
     width: 100%;
@@ -118,64 +131,88 @@
     justify-content: center;
     align-items: center;
   }
+
   section {
     display: flex;
     justify-content: space-around;
+    width: 800px;
+    margin: 0 auto;
+    position: relative;
+    top: -70px;
+    z-index: 1;
 
     img {
-      width: 6.5rem;
-      height: 6.5rem;
+      width: 9.5rem;
+      height: 9.5rem;
       border-radius: 50%;
-      margin: 15px 5px;
     }
   }
+
   article {
     text-align: center;
-    border-bottom: 30px solid #3a1772;
-    padding: 10px;
-    display: flex;
+    width: 800px;
+    margin: 0 auto;
 
     p {
-      display: inline-block;
       margin: 0px;
-      text-align: center;
     }
-    img {
-      width: 6.5rem;
-      height: 6.5rem;
-      border-radius: 50%;
-      display: flex;
-      // margin: 0 auto;
-    }
+
     h2 {
       color: #3a1772;
       margin-top: 0px;
-      margin-bottom: 8px;
-      display: inline-block;
     }
+
     h3 {
       color: #3a1772;
       margin-top: 0px;
       margin-bottom: 8px;
     }
+
+    .contacts {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 30px 130px;
+
+      .elsa,
+      .michail {
+        display: flex;
+        align-items: center;
+      }
+
+      img {
+        width: 5.5rem;
+        height: 5.5rem;
+        border-radius: 50%;
+      }
+
+      p {
+        padding: 0px 10px;
+      }
+    }
   }
 
   footer {
     background-color: #310a31;
-    height: 100%;
+    border-top: 30px solid #3a1772;
     display: flex;
+    height: 100%;
     justify-content: space-around;
+    padding: 0px 150px;
+
     h4 {
       color: orange;
       margin: 0px;
       padding: 15px;
     }
+
     a {
       color: #d8ddef;
-      text-decoration: none;
       display: block;
+      text-decoration: none;
       text-align: center;
     }
+
     a:last-child {
       padding-bottom: 15px;
     }
