--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@
 
     input {
       border: none;
-      background-image: url("/images/search1.png");
+      background-image: url("images/search1.png");
       background-repeat: no-repeat;
       background-size: 2.5rem;
       padding: 10px 10px 10px 45px;
